update to question 4-2

--- a/HW_Unit_04.ipynb
+++ b/HW_Unit_04.ipynb
@@ -170,23 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a board size: 5\n",
-      "1 0 0 0 0 0 \n",
+      "Enter a board size: 4\n",
+      "1 0 0 0 \n",
       "\n",
-      "1 1 0 0 0 0 \n",
+      "1 1 0 0 \n",
       "\n",
-      "1 2 1 0 0 0 \n",
+      "1 2 1 0 \n",
       "\n",
-      "1 3 3 1 0 0 \n",
-      "\n",
-      "1 4 6 4 1 0 \n",
+      "1 3 3 1 \n",
       "\n"
      ]
     }
@@ -202,7 +200,7 @@
     "    inner = []\n",
     "    inner.append(1)\n",
     "    \n",
-    "    for j in range(numRows):\n",
+    "    for j in range(numRows-1):\n",
     "        inner.append(0)\n",
     "    total_list.append(inner)\n",
     "\n",
@@ -220,45 +218,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 0 0 0 0 \n",
-      "\n",
-      "1 1 0 0 0 \n",
-      "\n",
-      "1 2 1 0 0 \n",
-      "\n",
-      "1 3 3 1 0 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "number = 4\n",
-    "total_list=[]\n",
-    "for i in range(number):\n",
-    "    inner = []\n",
-    "    inner.append(1)\n",
+    "# number = 4\n",
+    "# total_list=[]\n",
+    "# for i in range(number):\n",
+    "#     inner = []\n",
+    "#     inner.append(1)\n",
     "    \n",
-    "    for j in range(number):\n",
-    "        inner.append(0)\n",
-    "    total_list.append(inner)\n",
+    "#     for j in range(number):\n",
+    "#         inner.append(0)\n",
+    "#     total_list.append(inner)\n",
     "\n",
-    "for b in range(1, number):\n",
-    "    total_list[b][0] = 1\n",
-    "    for j in range(1, i+1):\n",
-    "        total_list[b][j] = total_list[b-1][j] + total_list[b-1][j-1] \n",
+    "# for b in range(1, number):\n",
+    "#     total_list[b][0] = 1\n",
+    "#     for j in range(1, i+1):\n",
+    "#         total_list[b][j] = total_list[b-1][j] + total_list[b-1][j-1] \n",
     "\n",
-    "total_list\n",
-    "for p in total_list:\n",
-    "    for k in p:\n",
-    "        print(k, end=\" \" )\n",
-    "    print('\\n')"
+    "# total_list\n",
+    "# for p in total_list:\n",
+    "#     for k in p:\n",
+    "#         print(k, end=\" \" )\n",
+    "#     print('\\n')"
    ]
   },
   {
