--- a/HW_Unit_04.ipynb
+++ b/HW_Unit_04.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,9 @@
      "text": [
       "Enter a board size: 4\n",
       "1 0 0 0 \n",
-      "\n",
       "1 1 0 0 \n",
-      "\n",
       "1 2 1 0 \n",
-      "\n",
-      "1 3 3 1 \n",
-      "\n"
+      "1 3 3 1 \n"
      ]
     }
    ],
@@ -213,7 +209,7 @@
     "for p in total_list:\n",
     "    for k in p:\n",
     "        print(k, end=\" \" )\n",
-    "    print('\\n')"
+    "    print()"
    ]
   },
   {
